5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1880_1613.log
== TEST (2019-07-03 14:08:19) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		al= al*b[i]
	elif(a[i]=="CORRIDA"):
		c=c*b[i]
	elif(a[i]=="DANCA"):
		d=d*b[i]
	elif(a[i]=="ESCALADA"):
		e=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(al)
print(c)
print(d)
print(e)
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:08:36) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		al= al*b[i]
	elif(a[i]=="CORRIDA"):
		c=c*b[i]
	elif(a[i]=="DANCA"):
		d=d*b[i]
	elif(a[i]=="ESCALADA"):
		e=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(al)
print(c)
print(d)
print(e)
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:09:38) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		al= al*b[i]
	elif(a[i]=="CORRIDA"):
		c=c*b[i]
	elif(a[i]=="DANCA"):
		d=d*b[i]
	elif(a[i]=="ESCALADA"):
		e=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(al)
print(c)
print(d)
print(e)
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:12:45) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		c=c*b[i]
	elif(a[i]=="DANCA"):
		d=d*b[i]
	elif(a[i]=="ESCALADA"):
		e=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(sum(z,c,d,e,h)

-- ERROR:
File "XXXX", line 24
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:12:51) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		c=c*b[i]
	elif(a[i]=="DANCA"):
		d=d*b[i]
	elif(a[i]=="ESCALADA"):
		e=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(sum(z,c,d,e,h)
-- ERROR:
File "XXXX", line 24
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:32:33) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		x=d*b[i]
	elif(a[i]=="ESCALADA"):
		k=*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(z+x+y+k+h)
-- ERROR:
File "XXXX", line 19
    k=*b[i]
     ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:32:50) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		x=d*b[i]
	elif(a[i]=="ESCALADA"):
		k=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(z+x+y+k+h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:34:22) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		x=d*b[i]
	elif(a[i]=="ESCALADA"):
		k=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(z+y+x+k+k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:35:47) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		k=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(z+y+x+k+k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:53) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		k=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		h=h*b[i]
	i+=1
print(z+y+l+k+h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:40:46) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		m=e*b[i
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+m+w)
-- ERROR:
File "XXXX", line 20
    elif(a[i]=="HIDROGINASTICA"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:40:57) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		m=e*b[i
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+m+w)
-- ERROR:
File "XXXX", line 20
    elif(a[i]=="HIDROGINASTICA"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:41:16) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		m=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+m+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:42:18) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+m+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:43:08) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+q+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:44:13) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
	print(z+y+l+q+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:44:26) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
	print(z+y+l+q+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:44:43) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
	print(z+y+l+q+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:45:29) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+q+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:01) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+q+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:47:28) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		q=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+q+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:48:38) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:50:49) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(b)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:52:47) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
for i in range(a):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:55:03) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
for i in 
	if(a[0]=="ALONGAMENTO"):
		z= al*b[0]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- ERROR:
File "XXXX", line 11
    for i in 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:55:28) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(a)):
	if(a[0]=="ALONGAMENTO"):
		z= al*b[0]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:56:11) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(a)):
	if(a[0]=="ALONGAMENTO"):
		z= al*b[0]
	elif(a[1]=="CORRIDA"):
		y=c*b[1]
	elif(a[2]=="DANCA"):
		l=d*b[2]
	elif(a[3]=="ESCALADA"):
		g=e*b[3]
	elif(a[4]=="HIDROGINASTICA"):
		w=h*b[4]
	i+=1
print(z+y+l+g+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:58:56) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
while(i<size(a)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:02:17) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
z=0
y=0
l=0
g=0
w=0
while(i<size(a)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:02:56) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
al=3
c=10.3
d=6.7
e=9.7
h=5
i=0
z=0
y=0
l=0
g=0
w=0
while(i<size(a)):
	if(a[i]=="ALONGAMENTO"):
		z= al*b[i]
	elif(a[i]=="CORRIDA"):
		y=c*b[i]
	elif(a[i]=="DANCA"):
		l=d*b[i]
	elif(a[i]=="ESCALADA"):
		g=e*b[i]
	elif(a[i]=="HIDROGINASTICA"):
		w=h*b[i]
	i+=1
print(z+y+l+g+w)
-- EXECUTION TIME:
1.04432
-- TEST CASE 1:
---- input:
["HIDROGINASTICA","DANCA","CORRIDA"]
[20,30,60]
---- correct output:
919.0
---- user output:
919.0
-- TEST CASE 2:
---- input:
["ALONGAMENTO","DANCA","ESCALADA"]
[15,12,30]
---- correct output:
416.4
---- user output:
416.4
-- TEST CASE 3:
---- input:
["ALONGAMENTO","CORRIDA","HIDROGINASTICA"]
[11,20,30]
---- correct output:
389.0
---- user output:
389.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
